--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ readme = "README.md"
 license = {file = "LICENSE"}
 keywords = ["scipy", "sparse matrix", "csr"]
 classifiers = [
-    "Development Status :: 4 - Beta",
+    "Development Status :: 3 - Alpha",
     "Programming Language :: Python",
     "Intended Audience :: Developers",
 ]
